public/assets/css/custom.css
/* ... */
@media (max-width: 424px) {
    .container,
    .container-fluid {
        padding-left: 5px;
        padding-right: 5px;
    }

    .row {
        margin-left: -5px;
        margin-right: -5px;
    }

    .col-lg-1,
    .col-lg-10,
    .col-lg-11,
    .col-lg-12,
    .col-lg-2,
    .col-lg-3,
    .col-lg-4,
    .col-lg-5,
    .col-lg-6,
    .col-lg-7,
    .col-lg-8,
    .col-lg-9,
    .col-md-1,
    .col-md-10,
    .col-md-11,
    .col-md-12,
    .col-md-2,
    .col-md-3,
    .col-md-4,
    .col-md-5,
    .col-md-6,
    .col-md-7,
    .col-md-8,
    .col-md-9,
    .col-sm-1,
    .col-sm-10,
    .col-sm-11,
    .col-sm-12,
    .col-sm-2,
    .col-sm-3,
    .col-sm-4,
    .col-sm-5,
    .col-sm-6,
    .col-sm-7,
    .col-sm-8,
    .col-sm-9,
    .col-xs-1,
    .col-xs-10,
    .col-xs-11,
    .col-xs-12,
    .col-xs-2,
    .col-xs-3,
    .col-xs-4,
    .col-xs-5,
    .col-xs-6,
    .col-xs-7,
    .col-xs-8,
    .col-xs-9 {
        padding-left: 5px;
        padding-right: 5px;
    }

    .table > thead > tr > th:first-child,
    .table > tbody > tr > th:first-child,
    .table > tfoot > tr > th:first-child,
    .table > thead > tr > td:first-child,
    .table > tbody > tr > td:first-child,
    .table > tfoot > tr > td:first-child {
        padding-left: 12px;
    }

    .table > thead > tr > th:last-child,
    .table > tbody > tr > th:last-child,
    .table > tfoot > tr > th:last-child,
    .table > thead > tr > td:last-child,
    .table > tbody > tr > td:last-child,
    .table > tfoot > tr > td:last-child {
        padding-right: 12px;
    }

    .card .card-header {
        padding: 12px 12px;
    }

    .card .card-filter {
        padding: 1px 12px;
    }

    .card .card-body.card-padding {
        padding: 12px 12px;
    }

    .list-group .list-group-item {
        padding: 10px 12px;
    }
}

.card .card-header h2 {
    color: #000;
}

.card-back-btn {
    float: left;
    margin: -11px 23px 0px 0px;
    /*background: #fff;*/
    color: rgba(55, 71, 76, 1);
    padding: 1px 9px 0 9px;
    border-radius: 50px;
    font-size: 28px;
    line-height: 36px;
}

.card-back-btn:hover,
.card-back-btn:focus,
.card-back-btn:visited:hover,
.card-back-btn:active:hover,
.card-back-btn:focus:hover {
    color: #fff;
    background: rgba(55, 71, 76, 0.7);
}

table.dataTable thead [class*="sorting"] {
    background-position: center right -4px;
}

.vamiddle {
    vertical-align: middle !important;
}

.col-split-2 {
    -moz-column-count: 2;
    -webkit-column-count: 2;
    column-count: 2;
    -moz-column-gap: 0;
    -webkit-column-gap: 0;
    column-gap: 0;
}

.m-r-60 {
    margin-right: 60px;
}

.dataTables_wrapper .dataTables_paginate .paginate_button.current,
.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
.dataTables_wrapper .dataTables_paginate .paginate_button.current:focus {
    font-size: 13px;
}

#header .hi-logo {
    width: auto;
}

@media (max-width: 992px) {
    #header .hi-logo {
        float: left;
    }
}

@media (max-width: 374px) {
    .hi-menu > li {
        min-width: 40px;
    }
}

#header .hi-logo a {
    padding: 6px 10px;
    text-transform: none;
    font-size: 17px;
    font-weight: bold;
    white-space: nowrap;
    overflow: hidden !important;
    text-overflow: ellipsis;
}

#header .shi-logo {
    margin: 8px 0 0 50px;
    color: #fff;
    font-size: 16px;
}

#header .shi-logo span {
    font-weight: 700;
}

@media (max-width: 992px) {
    #header .shi-logo {
        width: 100%;
        margin: -6px 0 8px 9px;
        font-size: 13px;
    }
}

.dataTables_wrapper .dataTables_paginate .paginate_button {
    font-size: 13px;
}

.a-hover {
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.table-hover > tbody > tr:hover {
    cursor: pointer;
    cursor: hand;
}

.table-va-middle > tbody > tr > td {
    vertical-align: middle !important;
}
.v-middle {
    vertical-align: middle !important;
}

.w-100 {
    width: 100px;
}
.w-120 {
    width: 120px;
}
.w-200 {
    width: 200px;
}
.w-300 {
    width: 300px;
}

.f-s-8 {
    font-size: 8px;
}
.f-s-9 {
    font-size: 9px;
}
.f-s-10 {
    font-size: 10px;
}
.f-s-11 {
    font-size: 11px;
}
.f-s-12 {
    font-size: 12px;
}
.f-s-13 {
    font-size: 13px;
}
.f-s-14 {
    font-size: 14px;
}
.f-s-15 {
    font-size: 15px;
}
.f-s-16 {
    font-size: 16px;
}
.f-s-17 {
    font-size: 17px;
}
.f-s-18 {
    font-size: 18px;
}
.f-s-19 {
    font-size: 19px;
}
.f-s-20 {
    font-size: 20px;
}
.f-s-21 {
    font-size: 21px;
}
.f-s-22 {
    font-size: 22px;
}
.f-s-23 {
    font-size: 23px;
}
.f-s-24 {
    font-size: 24px;
}
.f-s-25 {
    font-size: 25px;
}
.f-s-27 {
    font-size: 27px;
}
.f-s-30 {
    font-size: 30px;
}
.f-s-40 {
    font-size: 40px;
}
.f-s-50 {
    font-size: 50px;
}
.f-s-60 {
    font-size: 60px;
}
.f-s-70 {
    font-size: 70px;
}
.f-s-80 {
    font-size: 80px;
}

.l-h-15 {
    line-height: 15px;
}
.l-h-16 {
    line-height: 16px;
}
.l-h-17 {
    line-height: 17px;
}
.l-h-18 {
    line-height: 18px;
}
.l-h-19 {
    line-height: 19px;
}
.l-h-20 {
    line-height: 20px;
}
.l-h-25 {
    line-height: 25px;
}
.l-h-30 {
    line-height: 30px;
}

.l-h-15 {
    line-height: 15px;
}
.l-h-16 {
    line-height: 16px;
}
.l-h-17 {
    line-height: 17px;
}
.l-h-18 {
    line-height: 18px;
}
.l-h-19 {
    line-height: 19px;
}
.l-h-20 {
    line-height: 20px;
}
.l-h-25 {
    line-height: 25px;
}
.l-h-30 {
    line-height: 30px;
}

.m-t-35 {
    margin-top: 35px;
}
.m-t-40 {
    margin-top: 40px;
}
.m-t-45 {
    margin-top: 45px;
}
.m-t-50 {
    margin-top: 50px;
}
.m-t-55 {
    margin-top: 55px;
}
.m-t-60 {
    margin-top: 60px;
}

.m-b-35 {
    margin-bottom: 35px !important;
}
.m-b-40 {
    margin-bottom: 40px !important;
}
.m-b-45 {
    margin-bottom: 45px !important;
}
.m-b-50 {
    margin-bottom: 50px !important;
}
.m-b-55 {
    margin-bottom: 55px !important;
}
/* ... */

